# agentic-workflow-builder

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
agents/: agents.py  base_agent.py  config_driven_workflow.py  hierarchical_workflow_builder.py  langgraph_agent.py  langgraph_agent_v2.py  llm_implementations.py  mcp_client.py
agents/memory/: memory_store.py
agents/shared/: __init__.py  agent_logging.py  agent_memory.py  database_utils.py  datasource_scope.py  llm_factory.py  mcp_tools.py  mcp_tools_langchain.py  message_builder.py  template_manager.py  workflow_utils.py
api/: main.py
api/middleware/: auth_middleware.py
api/routes/: agent_routes.py  auth_routes.py  datasource_routes.py  mcp_server_routes.py  media_routes.py  workflow_routes.py
api/schemas/: auth.py  requests.py
config/: config.yaml  config_loader.py  logging_config.yaml
config/workflow_defaults/: agents_config.json  workflow_config.json
db/: __init__.py  config.py  init_db.py  models.py  sample_data.py  utils.py
db/crud/: agent.py  agent_execution_log.py  datasource.py  interaction.py  llm_usage.py  mcp_server.py  media.py  memory.py  memory_transaction.py  performance.py  rag.py  session.py  tool.py  tool_execution_log.py  transaction.py
memory/: memory_store.py
services/: __init__.py  datasource_crypto.py  datasource_ingest.py  datasource_runtime.py
utils/: document_processors.py  logging_utils.py  markdown_utils.py  mcp_tool_fetcher.py  mcp_url.py  media_storage.py  rag_utils.py  selectors.py  token_validator.py  tool_permissions.py  user_context.py
